// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputModal API onSubmit should NOT be called 1`] = `
<TextInputModal
  ariaLabel="input text"
  isOpen={true}
  onCancel={[Function]}
  onSubmit={[Function]}
  title=""
>
  <Modal
    actions={
      Array [
        <Unknown
          data-action="cancel"
          onClick={[Function]}
          variant="secondary"
        >
          Cancel
        </Unknown>,
        <Unknown
          data-action="confirm"
          onClick={[Function]}
          variant="primary"
        >
          Save
        </Unknown>,
      ]
    }
    appendTo={
      <body
        class="pf-c-backdrop__open"
      >
        <div
          aria-hidden="true"
        >
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-2"
                aria-modal="true"
                class="pf-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
                id="pf-modal-part-0"
                role="dialog"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-2"
                >
                  <input
                    aria-invalid="false"
                    aria-label="input text"
                    class="pf-c-form-control"
                    type="text"
                    value=""
                  />
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    class="pf-c-button pf-m-secondary"
                    data-action="cancel"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    class="pf-c-button pf-m-primary"
                    data-action="confirm"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Save
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
        >
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-3"
                aria-modal="true"
                class="pf-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
                id="pf-modal-part-1"
                role="dialog"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-3"
                >
                  <input
                    aria-invalid="false"
                    aria-label="input text"
                    class="pf-c-form-control"
                    type="text"
                    value=""
                  />
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    class="pf-c-button pf-m-secondary"
                    data-action="cancel"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    class="pf-c-button pf-m-primary"
                    data-action="confirm"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Save
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
        >
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-4"
                aria-modal="true"
                class="pf-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
                id="pf-modal-part-2"
                role="dialog"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-4"
                >
                  <input
                    aria-invalid="false"
                    aria-label="input text"
                    class="pf-c-form-control"
                    type="text"
                    value=""
                  />
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    class="pf-c-button pf-m-secondary"
                    data-action="cancel"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    class="pf-c-button pf-m-primary"
                    data-action="confirm"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Save
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-5"
                aria-modal="true"
                class="pf-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
                id="pf-modal-part-3"
                role="dialog"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-5"
                >
                  <input
                    aria-invalid="false"
                    aria-label="input text"
                    class="pf-c-form-control"
                    type="text"
                    value=""
                  />
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    class="pf-c-button pf-m-secondary"
                    data-action="cancel"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    class="pf-c-button pf-m-primary"
                    data-action="confirm"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Save
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
      </body>
    }
    aria-describedby=""
    aria-label=""
    aria-labelledby=""
    className="ins-c-inventory__detail--edit"
    hasNoBodyWrapper={false}
    isOpen={true}
    onClose={[Function]}
    showClose={true}
    title=""
    variant="small"
  >
    <Portal
      containerInfo={
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-5"
                aria-modal="true"
                class="pf-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
                id="pf-modal-part-3"
                role="dialog"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-5"
                >
                  <input
                    aria-invalid="false"
                    aria-label="input text"
                    class="pf-c-form-control"
                    type="text"
                    value=""
                  />
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    class="pf-c-button pf-m-secondary"
                    data-action="cancel"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    class="pf-c-button pf-m-primary"
                    data-action="confirm"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Save
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <Component
        actions={
          Array [
            <Unknown
              data-action="cancel"
              onClick={[Function]}
              variant="secondary"
            >
              Cancel
            </Unknown>,
            <Unknown
              data-action="confirm"
              onClick={[Function]}
              variant="primary"
            >
              Save
            </Unknown>,
          ]
        }
        aria-describedby=""
        aria-label=""
        aria-labelledby=""
        boxId="pf-modal-part-3"
        className="ins-c-inventory__detail--edit"
        descriptorId="pf-modal-part-5"
        hasNoBodyWrapper={false}
        isOpen={true}
        labelId="pf-modal-part-4"
        onClose={[Function]}
        showClose={true}
        title=""
        variant="small"
      >
        <Component>
          <div
            className="pf-c-backdrop"
          >
            <FocusTrap
              active={true}
              className="pf-l-bullseye"
              focusTrapOptions={
                Object {
                  "clickOutsideDeactivates": true,
                }
              }
              paused={false}
            >
              <div
                className="pf-l-bullseye"
              >
                <Component
                  aria-describedby="pf-modal-part-5"
                  aria-label=""
                  aria-labelledby=""
                  className="ins-c-inventory__detail--edit"
                  id="pf-modal-part-3"
                  style={Object {}}
                  variant="small"
                >
                  <div
                    aria-describedby="pf-modal-part-5"
                    aria-label={null}
                    aria-labelledby={null}
                    aria-modal="true"
                    className="pf-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
                    id="pf-modal-part-3"
                    role="dialog"
                    style={Object {}}
                  >
                    <Component
                      onClose={[Function]}
                    >
                      <Component
                        aria-label="Close"
                        className=""
                        onClick={[Function]}
                        variant="plain"
                      >
                        <button
                          aria-disabled={null}
                          aria-label="Close"
                          className="pf-c-button pf-m-plain"
                          data-ouia-component-id={null}
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe={true}
                          disabled={false}
                          onClick={[Function]}
                          tabIndex={null}
                          type="button"
                        >
                          <TimesIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 352 512"
                              width="1em"
                            >
                              <path
                                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                transform=""
                              />
                            </svg>
                          </TimesIcon>
                        </button>
                      </Component>
                    </Component>
                    <Component
                      id="pf-modal-part-5"
                    >
                      <div
                        className="pf-c-modal-box__body"
                        id="pf-modal-part-5"
                      >
                        <ForwardRef
                          aria-label="input text"
                          onChange={[Function]}
                          type="text"
                          value=""
                        >
                          <TextInputBase
                            aria-label="input text"
                            className=""
                            innerRef={null}
                            isDisabled={false}
                            isReadOnly={false}
                            isRequired={false}
                            onChange={[Function]}
                            type="text"
                            validated="default"
                            value=""
                          >
                            <input
                              aria-invalid={false}
                              aria-label="input text"
                              className="pf-c-form-control"
                              disabled={false}
                              onChange={[Function]}
                              readOnly={false}
                              required={false}
                              type="text"
                              value=""
                            />
                          </TextInputBase>
                        </ForwardRef>
                      </div>
                    </Component>
                    <Component>
                      <footer
                        className="pf-c-modal-box__footer"
                      >
                        <Component
                          data-action="cancel"
                          key="cancel"
                          onClick={[Function]}
                          variant="secondary"
                        >
                          <button
                            aria-disabled={null}
                            aria-label={null}
                            className="pf-c-button pf-m-secondary"
                            data-action="cancel"
                            data-ouia-component-id={null}
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            onClick={[Function]}
                            tabIndex={null}
                            type="button"
                          >
                            Cancel
                          </button>
                        </Component>
                        <Component
                          data-action="confirm"
                          key="confirm"
                          onClick={[Function]}
                          variant="primary"
                        >
                          <button
                            aria-disabled={null}
                            aria-label={null}
                            className="pf-c-button pf-m-primary"
                            data-action="confirm"
                            data-ouia-component-id={null}
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            onClick={[Function]}
                            tabIndex={null}
                            type="button"
                          >
                            Save
                          </button>
                        </Component>
                      </footer>
                    </Component>
                  </div>
                </Component>
              </div>
            </FocusTrap>
          </div>
        </Component>
      </Component>
    </Portal>
  </Modal>
</TextInputModal>
`;

exports[`TextInputModal render should render aria label 1`] = `
<Modal
  actions={
    Array [
      <Unknown
        data-action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Unknown>,
      <Unknown
        data-action="confirm"
        onClick={[Function]}
        variant="primary"
      >
        Save
      </Unknown>,
    ]
  }
  appendTo={<body />}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__detail--edit"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  showClose={true}
  title=""
  variant="small"
>
  <ForwardRef
    aria-label="Some aria label"
    onChange={[Function]}
    type="text"
    value=""
  />
</Modal>
`;

exports[`TextInputModal render should render open 1`] = `
<Modal
  actions={
    Array [
      <Unknown
        data-action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Unknown>,
      <Unknown
        data-action="confirm"
        onClick={[Function]}
        variant="primary"
      >
        Save
      </Unknown>,
    ]
  }
  appendTo={<body />}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__detail--edit"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  showClose={true}
  title=""
  variant="small"
>
  <ForwardRef
    aria-label="input text"
    onChange={[Function]}
    type="text"
    value=""
  />
</Modal>
`;

exports[`TextInputModal render should render title 1`] = `
<Modal
  actions={
    Array [
      <Unknown
        data-action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Unknown>,
      <Unknown
        data-action="confirm"
        onClick={[Function]}
        variant="primary"
      >
        Save
      </Unknown>,
    ]
  }
  appendTo={<body />}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__detail--edit"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  showClose={true}
  title="Some title"
  variant="small"
>
  <ForwardRef
    aria-label="input text"
    onChange={[Function]}
    type="text"
    value=""
  />
</Modal>
`;

exports[`TextInputModal render should render without any props 1`] = `
<Modal
  actions={
    Array [
      <Unknown
        data-action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Unknown>,
      <Unknown
        data-action="confirm"
        onClick={[Function]}
        variant="primary"
      >
        Save
      </Unknown>,
    ]
  }
  appendTo={<body />}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__detail--edit"
  hasNoBodyWrapper={false}
  isOpen={false}
  onClose={[Function]}
  showClose={true}
  title=""
  variant="small"
>
  <ForwardRef
    aria-label="input text"
    onChange={[Function]}
    type="text"
  />
</Modal>
`;
